--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>tailwindcss</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
   <body>
     <div id="app"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
